--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProgrezCloudApiJava
 endorsed.classpath=
 excludes=
+file.reference.gson-2.8.9.jar=lib/gson-2.8.9.jar
 file.reference.json-20230227.jar=lib/json-20230227.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.json-20230227.jar}
+    ${file.reference.json-20230227.jar}:\
+    ${file.reference.gson-2.8.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
